--- a/JaxStudy.Rmd
+++ b/JaxStudy.Rmd
@@ -6,12 +6,25 @@ output: html_document
 
 ---
 
-#############
+##########################################
+# Program to summarize data from a directory containing individual CSV files and 
+# corresponding PNG files into one data file. 
+# The program calculates void volumes, measured in microliters, by standardizing
+# the void area sizes, measured in pixel counts, to the size of the image of the filter
+# paper, and then applying the formula to convert area size to volume size. 
+# The void area sizes are contained in CSV files and the images of the filters are in 
+# PNG files. 
+# For each CSV file and its corresponding PNG file, the following values are returned: 
+# Total Volume, Number of Micro Voids, Number of Primary Voids, Mean Total Void Volume 
+# Mean Micro Void Volume, Mean Primary Void Volume. These values are added to a data frame,
+# and the corresponding CSV file names are used as the rownames for the data frame.   
+#########################################
 
 ```{r get dependencies}
   
-  library(png)
-
+library(png)
+library(tidyverse)
+ 
 ```
 
 
@@ -19,17 +32,26 @@ output: html_document
 
 ```{r read in csv and png files}
 
-# Read in the CSV and PNG Files
+ # !!Make sure to check the name of the directory path!!
+ #pngPathName <- "~/Test_set_Lg/Test_Set_Lg"
 
- pngPaths <- dir(path ="~/Test_set_Lg/Test_Set_Lg", pattern = "*.png", full.names = TRUE, recursive = TRUE)
- pngNames <- dir(path ="~/Test_set_Lg/Test_Set_Lg", pattern = "*.png", full.names = FALSE, recursive = TRUE)
+ trunk <- "~/150 Weeks"
 
+ # Make a list of the PNG file names with the paths included
+ pngPaths <- dir(path =trunk, pattern = "*.png", full.names = TRUE, recursive = TRUE)
  
-  #########################
- 
- csvPaths <- dir(path ="~/Test_set_Lg/Test_Set_Lg", pattern = "*.csv", full.names = TRUE, recursive = TRUE)
- csvNames <- dir(path ="~/Test_set_Lg/Test_Set_Lg", pattern = "*.csv", full.names = FALSE, recursive = TRUE)
+ # Make a list of the PNG file names without the paths
+ #pngNames <- dir(path =trunk, pattern = "*.png", full.names = FALSE, recursive = TRUE)
 
+# !!Make sure to check the name of the directory path!!
+# csvPathName <-	"~/Test_set_Lg/Test_Set_Lg"
+ 
+ # Make a list of the CSV file names with the paths included
+ #csvPaths <- dir(path =trunk, pattern = "*.csv", full.names = TRUE, recursive = TRUE)
+ 
+ csvPaths <- dir(path =trunk, pattern = "*areas.csv", full.names = TRUE, recursive = TRUE)
+ # Make a list of the CSV file names without the paths
+ #csvNames <- dir(path =trunk, pattern = "*areas.csv", full.names = FALSE, recursive = TRUE)
 
 
 
@@ -44,136 +66,159 @@ output: html_document
 
 # Below are a bunch of variables that are initialized before the operation
 
-base <- NULL  
-pnames <- NULL
-totala <- NULL
-micv <- NULL
-primv <- NULL
-totalv <- NULL
-primavg = NULL
-microavg = NULL
-tavg <- NULL
-stdmm <- NULL
+age <- NULL
+diet <- NULL
+group <- NULL
+day <- NULL
+imageNum <- NULL
 
-for (i in 1:length(csvPaths)) {
+pixelCount <- NULL
+totalVol <- NULL
+microVoid <- NULL
+primeVoid <- NULL
+totalVoids <- NULL
+primeAvg = NULL
+microAvg = NULL
+totalAvg <- NULL
+
+
+if (length(csvPaths) != length(pngPaths)) {
+  print("Number of csv files: ", length(csvPaths), ". Number of png files: ", length(pngPaths), 
+        ". Must have equal number of files!")
+} else {
+
   
-  # Read in the PNG file that corresponds with the CSV file
-  pp <- readPNG(pngPaths[i])
-  # estimate the pixel area of the cage floor
-  tempbase <- length(which(pp > .05))
-  base <- c(base, tempbase)
+  for (i in 1:length(csvPaths)) {
+
+	
+    branches <- str_split(csvPaths[i],"/")
   
-  # Read in the CSV file 
-  pf <- read.delim(csvPaths[i], sep = ",", header = TRUE, row.names = 1)
+    age <- rbind(age, branches[[1]][5])
+    diet <- rbind(diet, branches[[1]][6])
+    group <- rbind(group, branches[[1]][7])
+    day <- rbind(day, branches[[1]][8])
+    imageNum <- rbind(imageNum, branches[[1]][10])
   
-  # make sure there are pee events
-  if (dim(pf[1]) > 0) {
+    # Read in the PNG file that corresponds with the CSV file
+    pp <- readPNG(pngPaths[i])
+    # estimate the pixel area of the cage floor
+    temppixelCount <- length(which(pp > .05))
+    pixelCount <- c(pixelCount, temppixelCount)
+  
+    # Read in the CSV file 
+    pf <- read.delim(csvPaths[i], sep = ",", header = TRUE, row.names = 1)
+  
+    # make sure there are pee events
+    if (length(pf[,1]) > 0) {
     
-    #convert pixels to area
-    stdmm <- tempbase/(265*111)
+      #convert pixels to area
+      stdArea <- temppixelCount/(265*111)
     
-    #calculate volume 
-    pvol <- (pf[1]/stdmm)*0.283
+      #calculate volume 
+      pvol <- (pf[1]/stdArea)*0.283
     
-    # make a list of unfiltered total voids
-    #tpf <- pf[1]
-    # filter out very small area sizes
-    #filter <- which(pf[,1] > 1500)
+      # filter out very small volumes
+      filter <- which(pvol > 2)
     
-    # filter out very small volumes
-    filter <- which(pvol > 2)
+      # make a list of voids for file i
+      fpf <- pvol[filter,1]
     
-    # make a list of voids for file i
-    fpf <- pvol[filter,1]
-    
-    # check again for pee events after filtering
-    if (length(fpf) > 0) {
+      # check again for pee events after filtering
+      if (length(fpf) > 0) {
       
-      # count the number of total voids
-      tempEvent <- length(fpf)
-      #add the total void count from that file to list totalv
-      totalv <- c(totalv, tempEvent)
+        # count the number of total voids
+        tempEvent <- length(fpf)
+        #add the total void count from that file to list totalVoids
+        totalVoids <- c(totalVoids, tempEvent)
       
-      # count microvoids
-      tempmic <- which(fpf < 22)
-      if (length(tempmic > 0)) {
-        # add the total micro void count to list microv
-        micv <- c(micv, length(tempmic))
-        # makes a list of micro voids only
-        mfpf <- fpf[tempmic]
-        # calculate the mean of micro voids
-        tempmic <- mean(mfpf)
-        # add the mean of micro voids to list microavg
-        microavg <- c(microavg, tempmic)
-      }
-      else {
-        # if there are no micro voids
-        micv <- c(micv, 0)
-        microavg = c(microavg, 0)
-      }
+        # count microvoids
+        tempMicro <- which(fpf < 22)
+        if (length(tempMicro > 0)) {
+          # add the total micro void count to list microv
+          microVoid <- c(microVoid, length(tempMicro))
+          # makes a list of micro voids only
+          mfpf <- fpf[tempMicro]
+          # calculate the mean of micro voids
+          tempMicro <- mean(mfpf)
+          # add the mean of micro voids to list microAvg
+          microAvg <- c(microAvg, tempMicro)
+        } else {
+            # if there are no micro voids
+            microVoid <- c(microVoid, 0)
+            microAvg = c(microAvg, 0)
+          }
       
-      # count primaryvoids
-      tempprim <- which(fpf >= 22)
-      if (length(tempprim > 0)) {
-        # add the total primary void count to list primv
-        primv <- c(primv, length(tempprim))
-        # makes a list of primary voids only
-        pfpf <- fpf[tempprim]
-        # calculate the mean of primary voids
-        tempprimavg <- mean(pfpf)
-        # add the mean of primary voids to list primavg
-        primavg <- c(primavg, tempprimavg)
+        # count primaryvoids
+        tempPrime <- which(fpf >= 22)
+        if (length(tempPrime > 0)) {
+          # add the total primary void count to list primeVoid
+          primeVoid <- c(primeVoid, length(tempPrime))
+          # makes a list of primary voids only
+          pfpf <- fpf[tempPrime]
+          # calculate the mean of primary voids
+          tempPrimeAvg <- mean(pfpf)
+          # add the mean of primary voids to list primeAvg
+          primeAvg <- c(primeAvg, tempPrimeAvg)
         
-      }
-      else {
-        # if there are no primary voids
-        primv <- c(primv, 0)
-        primavg = c(primavg, 0)
-      }
+        } else {
+            # if there are no primary voids
+            primeVoid <- c(primeVoid, 0)
+            primeAvg = c(primeAvg, 0)
+          }
       
-      # sum the total area of all pee events   
-      tempa <- sum(fpf)
-      totala <- c(totala, tempa)
+        # sum the total area of all pee events   
+        tempa <- sum(fpf)
+        totalVol <- c(totalVol, tempa)
       
-      # calculate the mean of all voids
-      tempavg <- mean(fpf)
-      tavg <- c(tavg, tempavg)
-    }
+        # calculate the mean of all voids
+        tempAvg <- mean(fpf)
+        totalAvg <- c(totalAvg, tempAvg)
+      } else {
+          # If there are no micro or primary voids, but some voids < 1500 in area
+          microVoid <- c(microVoid, 0)
+          primeVoid <- c(primeVoid, 0)
+          primeAvg = c(primeAvg, 0)
+          microAvg = c(microAvg, 0) 
+          totalVol <- c(totalVol, 0)
+          totalVoids <- c(totalVoids,  0)
+          totalAvg <- c(totalAvg, 0)
+        }
     
-    else {
-      # If there are no micro or primary voids, but some voids < 1500 in area
-      #   totala <- c(totala, sum(tpf))
-      #  totalv <- c(totalv,  length(tpf))
-      micv <- c(micv, 0)
-      primv <- c(primv, 0)
-      #    tavg <- c(tavg, mean(tpf))
-      primavg = c(primavg, 0)
-      microavg = c(microavg, 0)
-      
-      totala <- c(totala, 0)
-      totalv <- c(totalv,  0)
-      tavg <- c(tavg, 0)
-      
-    }
+    } else {
     
+        totalVol <- c(totalVol, 0)
+        totalVoids <- c(totalVoids, 0)
+        microVoid <- c(microVoid, 0)
+        primeVoid <- c(primeVoid, 0)
+        totalAvg <- c(totalAvg, 0)
+        primeAvg = c(primeAvg, 0)
+        microAvg = c(microAvg, 0)
+      } 
+  
+    if (i %% 5 == 0)
+      print(paste(i, " of ", length(csvPaths), sep = ""))
+  
   }
-  else {
-    
-    totala <- c(totala, 0)
-    totalv <- c(totalv, 0)
-    micv <- c(micv, 0)
-    primv <- c(primv, 0)
-    tavg <- c(tavg, 0)
-    primavg = c(primavg, 0)
-    microavg = c(microavg, 0)
-    
-  } 
-  
-  
-  # Add the name of data file to list pnames   
-  tempName <- csvNames[i]
-  pnames <- c(pnames, tempName)
+
+
+
+# Format the results into a table and write to csv file 
+
+  pdata <- data.frame(row.names = imageNum, Image = imageNum, Total_Volumes = totalVol, Total_Voids = totalVoids, 
+                    Total_Mean = totalAvg, Primary_Voids = primeVoid, Primary_Mean = primeAvg, 
+                    Micro_Voids = microVoid, Micro_Mean = microAvg, Age = age, Diet = diet, Group = group, Day = day) 
+
+
+  # !!Make sure to check the name of the file that is written!!
+  nameOfFile <- "VoidDataSummary.csv"
+
+  write.table(pdata, nameOfFile, sep = ",", row.names = FALSE)
+
 }
+
+
+######### END ############### END ################## END ################ END ############
+
 ```
 ###################
 
@@ -182,21 +227,6 @@ You can change it to anything you want. Make sure to put the name in quotes "".
 
 
 ```{r }
-
-# Format the results into a table and write to csv file 
-
-# Make sure you know the name of the file that is written!
-nameOfFile <- "pVolsData.csv"
-
-pdata <- data.frame(row.names = pnames, csvNames = pnames, Total_Volumes = totala, Total_Voids = totalv, Total_Mean = tavg,
-                    Primary_Voids = primv, Primary_Mean = primavg, 
-                    Micro_Voids = micv, Micro_Mean = microavg) 
-
-
-write.table(pdata, nameOfFile, sep = ",", row.names = FALSE)
-
-
-
 
 ```
 
